<resources>
    <string name="app_name">Pawfect Match</string>
    <string name="tagline">Connecting Animals One Paw at a Time 🐾</string>
    <string name="add_pet">Add a Pet</string>
    <string name="search_hint">Search pets...</string>
    <string name="view_pets">View Pets</string>
    <string name="all">All</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="owner_info">Owner Information</string>
    <string name="pet_info">Pet Information</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="pet_name">Pet Name</string>
    <string name="type">Type</string>
    <string name="age">Age</string>
    <string name="race">Race (Breed)</string>
    <string name="description">Description</string>
    <string name="add_picture">Add Picture</string>
    <string name="submit">Submit</string>
    <string name="required_field">This field is required</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="uploading">Uploading...</string>
    <string name="saving">Saving pet profile...</string>
    <string name="success">Pet added successfully!</string>
    <string name="error">An error occurred. Please try again.</string>
    <string name="contact_owner">Contact Owner</string>
    <string name="no_pets">No pets found. Be the first to add one! 🐾</string>
    <string name="change_picture">Change Picture</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="delete_pet">Delete Pet</string>
    <string name="delete_confirmation">Are you sure you want to delete this pet?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pet_deleted">Pet deleted successfully!</string>
    <string name="pet_updated">Pet updated successfully!</string>
    <string name="updating">Updating pet profile...</string>
    <string name="deleting">Deleting pet...</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_title">Welcome Back!</string>
    <string name="sign_up_title">Create Account</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="logout">Logout</string>
    <string name="signing_in">Signing in...</string>
    <string name="signing_up">Creating account...</string>
    <string name="sign_in_success">Signed in successfully!</string>
    <string name="sign_up_success">Account created successfully!</string>
    <string name="sign_in_failed">Sign in failed. Please check your credentials.</string>
    <string name="sign_up_failed">Sign up failed. Please try again.</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="weak_password">Password should be at least 6 characters</string>
    <string name="invalid_email_format">Please enter a valid email address</string>
</resources>